syntax = "proto3";
package manga.v1;

enum RequestStatus {
  REQUEST_STATUS_UNSPECIFIED = 0;

  REQUEST_STATUS_LOADING = 1;
  REQUEST_STATUS_SCRAPING = 2;

  REQUEST_STATUS_ERROR = 3;
  REQUEST_STATUS_COMPLETED = 4;
}

enum Status {
  STATUS_UNSPECIFIED = 0;

  STATUS_ONGOING = 1;
  STATUS_COMPLETED = 2;
}

message Page {
  int32 order = 1;

  string image = 2; // Base64 - expensive
  string image_type = 3;
}

message Chapter {
  string title = 1;
  string link = 2;

  repeated Page pages = 3;
  repeated string tags = 4;
}

message Manga {
  string url = 1;
  string slug = 2;

  string name = 3;
  string description = 4;

  repeated string tags = 5;
  optional string last_update = 6;

  string image = 7; // Base64 - expensive
  string image_type = 8;

  optional Status status = 9;
  repeated Page pages = 10;
}

// ----------------------------------------------

message GetMangaRequest {
  string id = 1;
  string slug = 2;
}

message GetMangaResponse {
  RequestStatus status = 1;
  optional Manga data = 2;
}

service MangaService {
  rpc GetManga(GetMangaRequest) returns (stream GetMangaResponse) {}
}

// ---

message GetChapterRequest {
  string id = 1;
  string slug = 2;
  string chapter = 3;
}

message GetChapterResponse {
  RequestStatus status = 1;
  optional Chapter data = 2;
}

service ChapterService {
  rpc GetChapter(GetChapterRequest) returns (stream GetChapterResponse) {}
}

// ---

message SearchRequest {
  string id = 1;
  string slug = 2;
}

message SearchResponse {
  RequestStatus status = 1;
  optional Chapter data = 2;
}

service SearchService {
  rpc Search(SearchRequest) returns (stream SearchResponse) {}
}
